--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "angular-in-memory-web-api": "^0.11.0",
     "rxjs": "~6.6.0",
+    "serve": "^11.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -27,10 +29,10 @@
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "~3.7.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
